==> paulo-alt/ardupilot_zefiro/libraries/AP_HAL_ESP32/AnalogIn.cpp <==
#include <AP_HAL/AP_HAL.h>
#include <AP_HAL_ESP32/Semaphores.h>
#include <stdlib.h>
#include <stdio.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "soc/adc_channel.h"
#include "esp_adc/adc_oneshot.h"
#include "esp_adc/adc_cali.h"
#include "esp_adc/adc_cali_scheme.h"
#include "AnalogIn.h"
#define ESP32_ADC_MAVLINK_DEBUG 0
#include <GCS_MAVLink/GCS_MAVLink.h>
#define ANALOGIN_DEBUGGING 0
#define VOLTAGE_SCALING (3300.0f/4096.0f)
# define Debug(fmt, args ...)  do {printf("%s:%d: " fmt "\n", __FUNCTION__, __LINE__, ## args); } while(0)
# define Debug(fmt, args ...)
#define ADC_GRP1_NUM_CHANNELS   ARRAY_SIZE(AnalogIn::pin_config)
#define DEFAULT_VREF    3300         //Use adc2_vref_to_gpio() to obtain a better estimate
#define NO_OF_SAMPLES   256          //Multisampling

float AnalogSource::read_average()
{
    if ( _ardupin == ANALOG_INPUT_NONE ) {
        return 0.0f;
    }

    WITH_SEMAPHORE(_semaphore);

    if (_sum_count == 0) {
        float adc_reading = 0;
        //Multisampling
        for (int i = 0; i < NO_OF_SAMPLES; i++) {
            adc_reading += adc_read();
        }
        adc_reading /= NO_OF_SAMPLES;
        return adc_reading;
    }

    _value = _sum_value / _sum_count;
    _sum_value = 0;
    _sum_count = 0;

    return _value;
}

bool AnalogSource::set_pin(uint8_t ardupin)
{

    if (_ardupin == ardupin) {
        return true;
    }
    _ardupin = ardupin;

    int8_t pinconfig_offset = AnalogIn::find_pinconfig(ardupin);
    if (pinconfig_offset == -1 ) {
        Debug("AnalogIn: sorry set_pin() can't determine ADC1 offset from ardupin : %d \n",ardupin);
        return false;
    }

    adc_channel_t newChannel = (adc_channel_t)AnalogIn::pin_config[(uint8_t)pinconfig_offset].channel;
    float newscaler = AnalogIn::pin_config[(uint8_t)pinconfig_offset].scaling;

    Debug("AnalogIn: ardupin = %d, new channel = %d\n", ardupin, newChannel);

    if (_adc_channel == newChannel) {
        return true;
    }

    WITH_SEMAPHORE(_semaphore);

    if (_adc_cali_handle) {
        
        Debug("AnalogIn: adc_calibration_deinit(%x)\n", (uint)_adc_cali_handle);

        adc_calibration_deinit(_adc_cali_handle);
        _adc_cali_handle = 0;
    }    

    _adc_channel = newChannel;
    _scaler = newscaler;

    adc_init();

    _sum_value = 0;
    _sum_count = 0;
    _latest_value = 0;
    _value = 0;

    return true;

}

void AnalogIn::_timer_tick()
{
    for (uint8_t j = 0; j < ANALOG_MAX_CHANNELS; j++) {
        ESP32::AnalogSource *c = _channels[j];
        if (c != nullptr) {
            // add a value
            c->_add_value();
        }
    }

#if ESP32_ADC_MAVLINK_DEBUG
    static uint8_t count;
    if (AP_HAL::millis() > 5000 && count++ == 10) {
        count = 0;
        uint16_t adc[6] {};
        uint8_t n = ADC_GRP1_NUM_CHANNELS;
        if (n > 6) {
            n = 6;
        }
        for (uint8_t i = 0; i < n; i++) {
            adc[i] = buf_adc[i];
        }
        mavlink_msg_ap_adc_send(MAVLINK_COMM_0, adc[0], adc[1], adc[2], adc[3], adc[4],
                                adc[5]);
    }
#endif

}

AP_HAL::AnalogSource *AnalogIn::channel(int16_t ardupin)
{
    if (ardupin < 0) ardupin = ANALOG_INPUT_NONE;

    Debug("AnalogIn: configuring channel %d\n", ardupin);

    int8_t pinconfig_offset = find_pinconfig(ardupin);

    adc_channel_t adc_channel = (adc_channel_t)ANALOG_INPUT_NONE;
    float scaler = 0;

    if ((ardupin != ANALOG_INPUT_NONE) && (pinconfig_offset == -1 )) {
        Debug("AnalogIn: sorry channel() can't determine ADC1 offset from ardupin : %d \n",ardupin);
        ardupin = ANALOG_INPUT_NONE; // default it to this not terrible value and allow to continue
    }

    // although ANALOG_INPUT_NONE=255 is not a valid pin, we let it through here as
    //  a special case, so that it can be changed with set_pin(..) later.
    if (ardupin != ANALOG_INPUT_NONE) {
        adc_channel = (adc_channel_t)pin_config[(uint8_t)pinconfig_offset].channel;
        scaler = pin_config[(uint8_t)pinconfig_offset].scaling;
    }

    for (uint8_t j = 0; j < ANALOG_MAX_CHANNELS; j++) {
        if (_channels[j] == nullptr) {

            _channels[j] = NEW_NOTHROW AnalogSource(ardupin, adc_channel, scaler, 0.0f);

            if (ardupin != ANALOG_INPUT_NONE) {
                Debug("AnalogIn: channel: %d attached to ardupin:%d at adc1_offset:%d\n",\
                                    j, ardupin, adc_channel);
            }
            else {
                Debug("AnalogIn: channel: %d created but using delayed adc and gpio pin configuration\n", j);
            }

            return _channels[j];
        }
    }
    Debug("AnalogIn: out of channels\n");
    return nullptr;
}
