==> paulo-alt/ardupilot_zefiro/libraries/AP_HAL_ChibiOS/AnalogIn.cpp <==
#include <AP_HAL/AP_HAL.h>
#include "ch.h"
#include "hal.h"
#include <AP_Math/AP_Math.h>
#include "AnalogIn.h"
#include <AP_IOMCU/AP_IOMCU.h>
#include "hwdef/common/stm32_util.h"
#include <GCS_MAVLink/GCS_MAVLink.h>
#define STM32_ADC_DUAL_MODE                 FALSE
#define ANLOGIN_DEBUGGING 0
#define VOLTAGE_SCALING (3.3f / ((1 << 12) - 1))
  #define HAL_IOMCU_VSERVO_SCALAR 3
  #define HAL_IOMCU_VRSSI_SCALAR 1
 # define Debug(fmt, args ...)  do {printf("%s:%d: " fmt "\n", __FUNCTION__, __LINE__, ## args); } while(0)
 # define Debug(fmt, args ...)
#define ANALOG_SERVO_VRSSI_PIN 103
    #define ADC2_GRP1_NUM_CHANNELS ARRAY_SIZE(AnalogIn::pin_config_2)
    #define ADC3_VSENSE_CHAN 18
    #define ADC3_VREFINT_CHAN 19
    #define ADC3_VBAT4_CHAN 17
    #define HAL_MCU_MONITORING_PINS {ADC3_VBAT4_CHAN, 252, 3.30/4096}, {ADC3_VSENSE_CHAN, 253, 3.30/4096}, {ADC3_VREFINT_CHAN, 254, 3.30/4096}
    #define HAL_MCU_MONITORING_PINS
    #define HAL_ANALOG3_PINS
    #define ADC3_GRP1_NUM_CHANNELS ARRAY_SIZE(AnalogIn::pin_config_3)
#define ADC_GRP1_NUM_CHANNELS   ARRAY_SIZE(AnalogIn::pin_config)
#define ADC_BOARD_SCALING (1.0/16)
#define ADC_BOARD_SCALING 1

float AnalogSource::read_average()
{
    WITH_SEMAPHORE(_semaphore);

    if (_sum_count == 0) {
        return _value;
    }
    _value = _sum_value / _sum_count;
    _value_ratiometric = _sum_ratiometric / _sum_count;
    _sum_value = 0;
    _sum_ratiometric = 0;
    _sum_count = 0;

    return _value;
}

bool AnalogSource::set_pin(uint8_t pin)
{
    if (pin == ANALOG_INPUT_NONE) {
        return false;
    }
    if (_pin == pin) {
        return true;
    }
    bool found_pin = false;
    if (pin == ANALOG_SERVO_VRSSI_PIN) {
        found_pin = true;
    } else {
        for (uint8_t i=0; i<ADC_GRP1_NUM_CHANNELS; i++) {
            if (AnalogIn::pin_config[i].analog_pin == pin) {
                found_pin = true;
                break;
            }
        }
#ifdef HAL_ANALOG2_PINS
        for (uint8_t i=0; i<ADC2_GRP1_NUM_CHANNELS; i++) {
            if (AnalogIn::pin_config_2[i].analog_pin == pin) {
                found_pin = true;
                break;
            }
        }
#endif
#ifdef HAL_ANALOG3_PINS
        for (uint8_t i=0; i<ADC3_GRP1_NUM_CHANNELS; i++) {
            if (AnalogIn::pin_config_3[i].analog_pin == pin) {
                found_pin = true;
                break;
            }
        }
#endif
    }
    if (!found_pin) {
        return false;
    }

    WITH_SEMAPHORE(_semaphore);
    _pin = pin;
    _sum_value = 0;
    _sum_ratiometric = 0;
    _sum_count = 0;
    _latest_value = 0;
    _value = 0;
    _value_ratiometric = 0;
    return true;
}

void AnalogIn::_timer_tick(void)
{
    // read adc at 100Hz
    uint32_t now = AP_HAL::micros();
    uint32_t delta_t = now - _last_run;
    if (delta_t < 10000) {
        return;
    }
    _last_run = now;

    // update power status flags
    update_power_flags();

#if HAL_WITH_IO_MCU
    // handle special inputs from IOMCU
    _rssi_voltage = iomcu.get_vrssi_adc_count() * (VOLTAGE_SCALING *  HAL_IOMCU_VRSSI_SCALAR);
#endif

    /*
      update each of our ADCs
     */
    timer_tick_adc(0);
#if defined(HAL_ANALOG2_PINS)
    timer_tick_adc(1);
#endif
#if defined(HAL_ANALOG3_PINS)
    timer_tick_adc(2);
#endif

#if HAL_WITH_IO_MCU
    _servorail_voltage = iomcu.get_vservo_adc_count() * (VOLTAGE_SCALING * HAL_IOMCU_VSERVO_SCALAR);
#endif

#if HAL_WITH_MCU_MONITORING
    // 20Hz temperature and ref voltage
    static uint32_t last_mcu_temp_us;
    if (now - last_mcu_temp_us > 50000 &&
        hal.scheduler->is_system_initialized()) {
        last_mcu_temp_us = now;

        // factory calibration values
        const float TS_CAL1 = *(const volatile uint16_t *)0x1FF1E820;
        const float TS_CAL2 = *(const volatile uint16_t *)0x1FF1E840;
        const float VREFINT_CAL = *(const volatile uint16_t *)0x1FF1E860;

        _mcu_temperature = ((110 - 30) / (TS_CAL2 - TS_CAL1)) * (float(_mcu_monitor_temperature_accum/_mcu_monitor_sample_count) - TS_CAL1) + 30;
        _mcu_voltage = 3.3 * VREFINT_CAL / float((_mcu_monitor_voltage_accum/_mcu_monitor_sample_count)+0.001);
        _mcu_monitor_voltage_accum = 0;
        _mcu_monitor_temperature_accum = 0;
        _mcu_monitor_sample_count = 0;

        // note min/max swap due to inversion
        _mcu_voltage_min = 3.3 * VREFINT_CAL / float(_mcu_vrefint_max+0.001);
        _mcu_voltage_max = 3.3 * VREFINT_CAL / float(_mcu_vrefint_min+0.001);
    }
#endif
}

AP_HAL::AnalogSource* AnalogIn::channel(int16_t pin)
{
    WITH_SEMAPHORE(_semaphore);
    for (uint8_t j=0; j<ANALOG_MAX_CHANNELS; j++) {
        if (_channels[j] == nullptr) {
            _channels[j] = NEW_NOTHROW AnalogSource(pin);
            return _channels[j];
        }
    }
    osalDbgAssert(false, "Out of analog channels");
    DEV_PRINTF("Out of analog channels\n");
    return nullptr;
}
